# http-authz-policy-middleware

./: .gitignore  .traefik.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
.claude/: settings.local.json
.github/: CHANGELOG_GUIDE.md  dependabot.yml
.github/actions/install-wasm-opt/: action.yml
.github/workflows/: changelog.yml  ci.yml  playground.yml  release.yml
docs/: CHANGELOG_SYSTEM.md  DESIGN.md  PHASE20_SUMMARY.md  RELEASE_GUIDE.md  TASKS.md  full-plan.md
examples/: combined-rules.yml  path-restrictions.yml  team-based-access.yml
integration-test/: .dockerignore  Dockerfile.test  README.md  docker-compose.yml  dynamic.yml  run-tests.sh  setup-plugin.sh  test.sh  traefik.yml
playground/: app.js  index.html  style.css
scripts/: README.md  check-license-headers.sh  generate-changelog.sh  prepare-release.sh  rewrite-history.sh
src/: config.rs  context.rs  lib.rs  playground.rs
src/expr/: ast.rs  compiler.rs  eval.rs  lexer.rs  mod.rs  parser.rs
tests/: integration_test.rs
