[package]
name = "traefik-authz-wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http-wasm-guest = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.12", default-features = false, features = ["std", "perf"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
