[package]
name = "traefik-authz-wasm"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["traefik-plugin"]
traefik-plugin = ["dep:http-wasm-guest"]
playground = ["dep:wasm-bindgen"]

[dependencies]
http-wasm-guest = { version = "0.8.0", optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.12", default-features = false, features = ["std", "perf"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
